media/css/foundation/annual-report-2019.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../protocol/css/includes/lib';
@import '../../protocol/css/components/card';
@import '../../protocol/css/templates/card-layout';
@import '../../protocol/css/components/feature-card';
@import "../../protocol/css/components/hero";
@import '../../protocol/css/components/modal';


//* -------------------------------------------------------------------------- */
// Hero image & banner heading
.c-hero-banner {
    background: url('/media/img/foundation/annualreport/2019/pixel-mobile-bg.svg') right center no-repeat;
    background-size: contain;
    margin-bottom: $spacing-2xl;
    padding-top: $spacing-lg;

    @media #{$mq-md} {
        background-image: url('/media/img/foundation/annualreport/2019/pixel-bg.svg');
        background-position: right center;
        background-size: auto 100%;
        padding-top: $spacing-2xl;

        h1 {
            @include font-size(80px);
        }

        img {
            margin-top: $spacing-md;
        }
    }

    @media #{$mq-lg} {
        h1 {
            font-size: 7rem;
        }
    }

    h1 {
        align-items: flex-start;
        color: $color-black;
        display: flex;
        font-weight: normal;
        justify-content: center;
        line-height: 0.9;

        .l-highlight {
            background: $color-green-40;
            color: $color-black;
            display: inline-block;
            font-weight: bold;
            line-height: .7;
            padding: 0;
        }

        .left {
            position: relative;
            text-align: right;

            img {
                display: block;
                margin-top: $spacing-sm;
                max-width: $content-xs;
                position: absolute;
                right: 0;
            }
        }

        .right {
            margin-left: $spacing-sm;
            align-self: flex-start;
        }
    }
}

.c-page-intro {
    h2 {
        @include text-title-xs;
    }
}

.leadership {
    .leadership-intro {
        font-weight: 100;

        strong {
            font-weight: bold;
        }
    }

    .mzp-c-card-title {
        @include text-title-md;
        margin-bottom: $spacing-2xl;
        font-weight: normal;
    }
}


//* -------------------------------------------------------------------------- */
// Content sections
.c-intro-section {
    p {
        @include font-mozilla;
        @include text-title-sm;
        font-style: italic;
        margin-bottom: 0;
    }
}

.c-intro-section,
.c-content-section {
    padding: $spacing-lg 0;

    .c-copy-wrapper {
        h2 {
            @include text-title-sm;
        }

        h3 {
            @include text-title-xs;
        }

        img {
            margin: $spacing-xl auto;
        }

        .c-copy-intro {
            font-style: italic;
        }
    }

    @media #{$mq-lg} {

        .c-copy-wrapper {
            @include clearfix;
            margin: 0 auto;
            width: 90%;

            header {
                @include bidi(((float, left, right),));
                width: 30%;
            }

            .c-copy {
                @include bidi(((float, right, left),));
                width: 65%;
            }
        }

        &:nth-child(even) {
            padding: $spacing-2xl 0 $spacing-lg;
        }
    }

    @media #{$mq-xl} {
        padding: $spacing-2xl 0 $spacing-lg;

        .c-copy-wrapper {
            width: 70%;
        }
    }
}

.c-content-section:nth-child(odd) {
    background: $color-marketing-gray-20;
    padding: $spacing-2xl $spacing-lg $spacing-lg;
}


//* -------------------------------------------------------------------------- */
// Page footer
.c-site-footer {
    ul {
        margin: 0 auto $spacing-xl;
    }

    li {
        display: block;
        margin: $spacing-lg auto;

        a {
            @include transition(background-color 100ms ease-in-out);
            background-color: $color-link;
            color: $color-white;
            display: block;
            font-weight: bold;
            height: 100%;
            line-height: 1.5;
            min-height: 60px;
            padding: $spacing-lg;
            text-decoration: none;
            text-transform: uppercase;

            small {
                display: block;
                font-weight: 100;
                text-transform: none;
            }

            &:hover,
            &:active,
            &:focus {
                background-color: $color-link-hover;
                color: $color-white;
                text-decoration: none;
            }
        }
    }

    @media #{$mq-lg} {
        ul {
            @include flexbox;
            @include align-items(stretch);
            width: 70%;
        }

        li {
            flex: 1;

            &:first-child a {
                @include bidi(((margin-right, 10px, margin-left, 0),));

            }

            &:last-child a {
                @include bidi(((margin-left, 10px, margin-right, 0),));
            }
        }
    }
}

// Fade in lazy images
.lazy-image-container .mzp-c-card-image {
    opacity: 1;
    transition: opacity 300ms;
}

.lazy-image-container .mzp-c-card-image[data-src] {
    opacity: 0;
}


// Hide enhanced content if JS isn't available
.no-js-hidden {
    .no-js  & {
        @include hidden;
    }
}

.js-modal-content {
    .js  & {
        @include hidden;
    }

    section + section {
        margin-top: $spacing-2xl;
        padding-top: $spacing-2xl;
        border-top: 1px solid $color-black;
    }
}

.mzp-c-modal .mzp-c-modal-overlay-contents .mzp-c-modal-content {
    display: block;
}

.has-modal {
    cursor: pointer;
}
/* ... */

